[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "crawl4ai>=0.8.6",
    "ddgs>=9.13.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "google-news-api>=0.0.6",
    "httpx>=0.28.1",
    "langchain>=1.2.14",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.25",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-json-logger>=4.0.0",
    "requests>=2.33.1",
    "structlog>=25.5.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
]

[tool.setuptools]
packages = ["apps", "core", "configs", "infra", "scripts"]
